[package]
name = "gossip-glomers"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.27.0", features = ["full"] }
serde_json = "1.0"
serde = { version = "1.0.160", features = ["derive"] }
thiserror = "1.0.40"
uuid = { version = "1.3.1", features = ["v4", "serde"] }
futures = "0.3.28"
tokio-stream = "0.1.12"
tower = { version = "0.4.13", features = ["util", "retry", "timeout", "buffer"] }